barcharts were stretched on safari when viewport width small. Maybe a bug in chart.js. Maybe not. I couldnt figure it out. On Safari, low viewport width: instead of displaying charts on canvas elements, now they display as images. This way they do not seem stretched.

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -1,19 +1,3 @@
-.results_area {
-    width: var(--content-width);
-    margin: 0px calc((100vw - var(--content-width)) / 2) 30px calc((100vw - var(--content-width)) / 2);
-    min-height: calc(100vh - 80px - 175px - 135px - 30px); /*total height - header h - subheader h - footer h - margin-bottom*/;
-    /* overflow-y: visible;
-    overflow-x: hidden; */
-    position: relative;
-}
-@media (max-width: 500px) {
-    .results_area {
-        width: 100vw;
-        margin: 0px 0px 30px 0px;
-        min-height: calc(100vh - 80px - 205px - 135px - 30px); /*total height - header h - subheader h - footer h - margin-bottom*/
-    }
-}
-
 .results_buttoncontainer {
     display: flex;
     flex-wrap: nowrap;
@@ -73,6 +57,11 @@
         padding: 0px 10px;
         min-height: fit-content;
     }
+}
+
+.safari_barchart_image {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* .pdf_bar_chart {
